# tensorrt_plugin_example

./: CMakeLists.txt  README.md  build_engine.cpp  create_identity_neural_network.py  main.cpp  plugin.yml
src/: identity_conv_plugin.cpp  identity_conv_plugin_creator.cpp  identity_conv_plugin_creator.h  plugin_registration.cpp  plugin_registration.h  utils.cpp
src/manual/: identity_conv_plugin.h  utils.h
src/trtpg/IdentityconvIPluginV2DynamicExt/: IdentityconvIPluginV2DynamicExt.cpp  IdentityconvIPluginV2DynamicExt.h  Makefile
